# ai_f1

./: .gitignore  README.md  pyproject.toml  test.ipynb  test_one_lap.py  test_one_lap_original.py
notebooks/: 01_circuit_driver.ipynb  01_circuit_driver__.ipynb  02_tyre.ipynb  02_tyreMODULAR.ipynb  info_tables_available.ipynb  tyre_LORO.ipynb  tyre_OLD.ipynb  tyre_oneRaceEval.ipynb
src/: get_chemical_compounds.py  get_data.py  objective1_baseline.py
